# ha-integration

./: .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  hacs.json  pyproject.toml  requirements_test.txt
.github/workflows/: ci.yml  release.yml
custom_components/social_home/: __init__.py  config_flow.py  const.py  coordinator.py  federation.py  federation_inbox.py  manifest.json  presence.py
custom_components/social_home/translations/: en.json
tests/: __init__.py  conftest.py  test_config_flow.py  test_coordinator.py  test_federation.py  test_federation_inbox.py  test_init.py  test_presence.py
