# Tool-only ``pyproject.toml``. This repo ships a HACS custom
# component — it is *not* a pip-installable package. ``[project]``
# is deliberately absent: editable installs add a ``__path_hook__``
# entry to ``sys.path`` that Home Assistant's custom-component
# loader tries to ``iterdir()`` and crashes on. Dev / CI
# dependencies live in ``requirements_test.txt`` instead.

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["custom_components/social_home"]

[tool.coverage.report]
# Coverage for config-flow branches and the coordinator error paths
# is exercised by behavioural tests; raise this floor as the
# integration grows.
fail_under = 85
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pyflakes + pycodestyle
    "I",             # import sorting
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "RUF",
]

[tool.mypy]
# Runtime floor is 3.13 (HA Core's minimum) but HA's own source uses
# 3.14-only grammar in a handful of files, which mypy refuses to
# parse under ``python_version = "3.13"``. Check against 3.14 so the
# HA imports parse; the code we write here keeps 3.13 grammar and
# CI runs the test suite on 3.13 to confirm.
python_version = "3.14"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
files = ["custom_components/social_home"]

[[tool.mypy.overrides]]
module = ["homeassistant.*", "voluptuous.*", "socialhome_client.*"]
ignore_missing_imports = true
# Strict mode's ``no_implicit_reexport`` rule is too aggressive for
# third-party code we don't own — e.g. ``homeassistant.components
# .hassio.get_supervisor_client`` is re-exported from the package
# ``__init__`` but not listed in ``__all__``. Let mypy trust the
# import path HA itself documents.
implicit_reexport = true
